Merged changes from dev. Removed jar files before release.