@@ -25,10 +25,10 @@
   <modelVersion>4.0.0</modelVersion>
   <packaging>pom</packaging>
   <groupId>com.microsoft.office</groupId>
-  <artifactId>mail-calendar-contact</artifactId>
+  <artifactId>mail-calendar-contact-parent</artifactId>
   <version>0.11.1-SNAPSHOT</version>
-  <name>Microsoft Office 365 Mail-Calendar-Contact SDK for Java</name>
-  <description>Java SDK for Office 365 Mail-Calendar-Contact services</description>
+  <name>Microsoft Office 365 Mail-Calendar-Contact SDK for Java Parent Configuration</name>
+  <description>Java SDK for Office 365 Mail-Calendar-Contact services: Parent</description>
 
   <url>https://github.com/OfficeDev/Office-365-SDK-for-Android</url>
 
@@ -61,12 +61,10 @@
   </developers>
 
   <scm>
-    <url>scm:git:https://github.com/nikita-shupletsov-akvelon/Office-Android-Exchange-SDK-Maven-Release.git</url>
-    <connection>scm:git:git://github.com/nikita-shupletsov-akvelon/Office-Android-Exchange-SDK-Maven-Release.git</connection>
-    <developerConnection>scm:git:https://github.com/nikita-shupletsov-akvelon/Office-Android-Exchange-SDK-Maven-Release.git</developerConnection>
-    <!--tag>office365-mail-calendar-contact-0.11.1</tag-->
-    <tag>HEAD</tag>
-  </scm>
+    <url>https://github.com/OfficeDev/Office-365-SDK-for-Android/tree/maven_central/sdk/office365-mail-calendar-contact-sdk</url>
+    <connection>scm:git:git://github.com/OfficeDev/Office-365-SDK-for-Android.git</connection>
+    <developerConnection>scm:git:https://github.com/OfficeDev/Office-365-SDK-for-Android.git</developerConnection>
+    </scm>
 
   <prerequisites>
     <maven>[3.0.3,)</maven>
@@ -86,7 +84,8 @@
 
 	<proguard.version>4.8</proguard.version>
 
-    <skip.it.tests>true</skip.it.tests>
+    <backbone.version>0.11.1</backbone.version>
+    
     <main.basedir>${project.basedir}</main.basedir>
 
     <serviceRootURL>https://outlook.office365.com/ews/odata</serviceRootURL>
@@ -96,8 +95,7 @@
 
     <skip.tests>true</skip.tests>
     
-<maven.javadoc.skip>true</maven.javadoc.skip>	
-  </properties>
+</properties>
 
   <dependencyManagement>
     <dependencies>
@@ -155,8 +153,7 @@
             <target>${targetJdk}</target>
             <showWarnings>true</showWarnings>
             <showDeprecation>true</showDeprecation>
-            <!--<compilerArgument>-Xlint:unchecked</compilerArgument>-->
-          </configuration>
+            </configuration>
         </plugin>
 
         <plugin>
@@ -183,6 +180,7 @@
           <version>1.8</version>
         </plugin>
 
+        <!-- e2e SDK tests -->
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
@@ -194,29 +192,7 @@
             <runOrder>alphabetical</runOrder>
           </configuration>
         </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-failsafe-plugin</artifactId>
-          <version>2.16</version>
-          <configuration>
-            <skipTests>${skip.it.tests}</skipTests>
-
-            <redirectTestOutputToFile>true</redirectTestOutputToFile>
-            <encoding>utf-8</encoding>
-            <runOrder>alphabetical</runOrder>
-          </configuration>
-          <executions>
-            <execution>
-              <id>integration-test</id>
-              <goals>
-                <goal>integration-test</goal>
-                <goal>verify</goal>
-              </goals>
-            </execution>
-          </executions>
-        </plugin>
-
-        <plugin>
+                <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>exec-maven-plugin</artifactId>
           <version>1.2.1</version>
@@ -229,7 +205,7 @@
           <version>2.5</version>
           <configuration>
             <autoVersionSubmodules>true</autoVersionSubmodules>
-            <!--tagNameFormat>office365-mail-calendar-contact-@{project.version}</tagNameFormat-->
+            <tagNameFormat>mail-calendar-contact-@{project.version}</tagNameFormat>
           </configuration>
         </plugin>
 
@@ -269,23 +245,27 @@
 		</plugin>
 						<plugin>
 			<groupId>org.apache.maven.plugins</groupId>
-			<artifactId>maven-javadoc-plugin</artifactId>
-		</plugin>
-      </plugins>
-    </pluginManagement>
+			<artifactId>maven-source-plugin</artifactId>
+		<version>2.2.1</version>
+            <executions>
+                <execution>
+                <id>attach-sources</id>
+                <phase>verify</phase>
+                <goals>
+      <goal>jar-no-fork</goal>
+    </goals>
 
-	<plugins>
-        <!-- Don't deploy all artifacts. Overridden in submodules. -->         
+</execution>
+	</executions>
+        </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-deploy-plugin</artifactId>
-        <executions> 
-          <execution>
-            <id>default-deploy</id> 
-            <phase>none</phase> 
-          </execution>
-        </executions>
-      </plugin>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>2.9.1</version>
+          </plugin>
+            </plugins>
+          </pluginManagement>
+              <plugins>
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-enforcer-plugin</artifactId>
@@ -387,119 +367,7 @@
 	</plugins>
   </build>
 
-      <reporting>
-    <plugins>
-		<!--plugin>
-			<groupId>org.apache.maven.plugins</groupId>
-			<artifactId>maven-site-plugin</artifactId>
-			<version>3.0</version>
-<configuration>
-				<stagingDirectory>${basedir}\target\stage</stagingDirectory>
-				<skip>true</skip>
-				<skipDeploy>true</skipDeploy>				
-<reportPlugins>
-<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-project-info-reports-plugin</artifactId>
-						<version>2.4</version>
-</plugin>
-<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-javadoc-plugin</artifactId>
-						<version>2.8</version>
-<reportSets>
-<reportSet>
-								<id>non-aggregate</id>
-<reports>
-									<report>javadoc</report>
-</reports>
-</reportSet>
-<reportSet>
-								<id>aggregate</id>
-								<inherited>false</inherited>
-<reports>
-									<report>aggregate</report>
-</reports>
-</reportSet>
-</reportSets>
-</plugin>
-<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-surefire-report-plugin</artifactId>
-						<version>2.6</version>
-</plugin>
-</reportPlugins>
-</configuration>
-		</plugin-->
-		<!--plugin>
-			<groupId>org.apache.maven.plugins</groupId>
-			<artifactId>maven-pmd-plugin</artifactId>
-			<version>3.0.1</version>
-<configuration>
-				<linkXref>true</linkXref>
-				<sourceEncoding>utf-8</sourceEncoding>
-				<minimumTokens>100</minimumTokens>
-				<targetJdk>${targetJdk}</targetJdk>
-</configuration>
-		</plugin-->
-		<!--plugin>
-			<groupId>org.apache.maven.plugins</groupId>
-			<artifactId>maven-jxr-plugin</artifactId>
-			<version>2.3</version>
-<reportSets>
-<reportSet>
-					<id>aggregate</id>
-					<inherited>false</inherited>
-<reports>
-						<report>aggregate</report>
-</reports>
-</reportSet>
-</reportSets>
-		</plugin-->
-		<plugin>
-			<groupId>org.apache.maven.plugins</groupId>
-			<artifactId>maven-javadoc-plugin</artifactId>
-			<reportSets>
-				<reportSet>
-					<id>aggregate</id>
-					<inherited>false</inherited>
-					<reports>
-						<report>aggregate</report>
-					</reports>
-				<configuration>
-        	<includeDependencySources>true</includeDependencySources>
-		<sourcepath>${project.build.directory}/generated-sources</sourcepath>
-        </configuration>
-            </reportSet>
-            </reportSets>
-            </plugin>
-            <!--plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>findbugs-maven-plugin</artifactId>
-            <version>2.5.2</version>
-<configuration>
-                <effort>Max</effort>
-                <threshold>Low</threshold>
-                <xmlOutput>true</xmlOutput>
-</configuration>
-        </plugin-->
-	</plugins>
-  </reporting>
-
-  <!--distributionManagement>
-  	<repository>
-		<id>akvelon-maven-repo</id>
-		<url>http://192.168.9.120:8081/nexus/content/groups/public/</url>
-	</repository-->
-<!--
-<site>
-		<id>${project.artifactId}-site</id>
-		<url>${basedir}/</url>
-</site>
--->
-  <!--/distributionManagement-->
-
-  <profiles>
+      <profiles>
     <profile>
       <id>e2eTests</id>
       <properties>
@@ -535,134 +403,22 @@
         </plugins>
       </build>
     </profile>
-    <profile>
-      <id>it</id>
-
-      <properties> 
-        <skip.it.tests>false</skip.it.tests>
-
-        <log.directory>${project.build.directory}/log</log.directory>
-
-        <tomcat.version>7.0.47</tomcat.version>
-
-        <cargo.servlet.port>9080</cargo.servlet.port>
-        <cargo.tomcat.ajp.port>9889</cargo.tomcat.ajp.port>
-        <cargo.rmi.port>9805</cargo.rmi.port>
-        <cargo.log>${log.directory}/cargo.log</cargo.log>
-        <cargo.output>${log.directory}/cargo-output.log</cargo.output>
-      </properties>
-
-      <build>
-        <defaultGoal>clean install</defaultGoal>
-
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-enforcer-plugin</artifactId>
-            <inherited>true</inherited>
-            <executions>
-              <execution>
-                <id>enforce-property</id>
-                <goals>
-                  <goal>enforce</goal>
-                </goals>
-                <configuration>
-                  <rules>
-                    <requireProperty>
-                      <property>test.base.url</property>
-                      <message>You must set 'test.base.url' property!</message>
-                      <regex>http(s)?://.*</regex>
-                      <regexMessage>The test.base.url property must be a valid HTTP(S) URL.</regexMessage>
-                    </requireProperty>
-                    <requireProperty>
-                      <property>serviceRootURL</property>
-                      <message>You must set 'serviceRootURL' property!</message>
-                      <regex>http(s)?://.*</regex>
-                      <regexMessage>The serviceRootURL property must be a valid HTTP(S) URL.</regexMessage>
-                    </requireProperty>
-                  </rules>
-                  <fail>true</fail>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-
-          <plugin>
-            <groupId>org.codehaus.cargo</groupId>
-            <artifactId>cargo-maven2-plugin</artifactId>
-            <version>1.4.7</version>
-            <configuration>
-              <container>
-                <containerId>tomcat7x</containerId>
-                <zipUrlInstaller>
-                  <url>http://archive.apache.org/dist/tomcat/tomcat-7/v${tomcat.version}/bin/apache-tomcat-${tomcat.version}.zip</url>
-                  <downloadDir>${settings.localRepository}/org/codehaus/cargo/cargo-container-archives</downloadDir>
-                  <extractDir>${project.build.directory}/cargo/extract</extractDir>
-                </zipUrlInstaller>
-                <log>${cargo.log}</log>
-                <output>${cargo.output}</output>
-              </container>
-              <configuration>
-                <type>standalone</type>
-                <properties>
-                  <cargo.servlet.port>${cargo.servlet.port}</cargo.servlet.port>
-                  <cargo.tomcat.ajp.port>${cargo.tomcat.ajp.port}</cargo.tomcat.ajp.port>
-                  <cargo.rmi.port>${cargo.rmi.port}</cargo.rmi.port>
-
-                  <!--<cargo.jvmargs>-Xdebug -Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=n</cargo.jvmargs>-->
-                  <cargo.jvmargs>-noverify -XX:+CMSClassUnloadingEnabled -XX:+UseConcMarkSweepGC -XX:MaxPermSize=256m</cargo.jvmargs>
-                </properties>
-                <files>
-                  <file>
-                    <file>${project.build.directory}/test-classes/esigate.properties</file>
-                    <todir>lib</todir>
-                  </file>
-                </files>
-                <configfiles>
-                  <configfile>
-                    <file>${project.build.directory}/test-classes/context.xml</file>
-                    <todir>conf/</todir>
-                    <tofile>context.xml</tofile>
-                  </configfile>
-                  <configfile>
-                    <file>${project.build.directory}/test-classes/tomcat-users.xml</file>
-                    <todir>conf/</todir>
-                    <tofile>tomcat-users.xml</tofile>
-                  </configfile>
-                </configfiles>
-              </configuration>
-              <deployables>
-                <deployable>
-                  <groupId>com.microsoft.office</groupId>
-                  <artifactId>mail-calendar-contact-proxy-test-service</artifactId>
-                  <type>war</type>
-                  <properties>
-                    <context>/</context>
-                  </properties>
-                </deployable>
-              </deployables>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-
-      <modules>
-        <module>test-service</module>
-      </modules>
-    </profile>
-
-    <profile>
+        <profile>
       <id>nexus-release-profile</id>
       <distributionManagement>
         <snapshotRepository>
-          <id>akvelon-maven-repo</id>
+          <id>			<!--sonatype-nexus-snapshots -->
+akvelon-maven-repo		  </id>
           <name>Sonatype Nexus Snapshots</name>
-          <url>http://192.168.9.120:8081/nexus/content/repositories/akvelon/</url>
+          <url>			<!--https://oss.sonatype.org/content/repositories/snapshots-->
+http://192.168.9.120:8081/nexus/content/repositories/akvelon/		  </url>
         </snapshotRepository>
         <repository>
-          <id>akvelon-maven-repo</id>
+          <id>			  <!--sonatype-nexus-staging-->
+akvelon-maven-repo		  </id>
           <name>Nexus Release Repository</name>
-          <url>http://192.168.9.120:8081/nexus/content/repositories/akvelon/</url>
+          <url>			<!--https://oss.sonatype.org/service/local/staging/deploy/maven2/-->
+http://192.168.9.120:8081/nexus/content/repositories/akvelon/		  </url>
         </repository>
       </distributionManagement>
       <activation>
@@ -695,11 +451,7 @@
     </profile>
   </profiles>
 
-  <modules>
+<modules>
 	<module>core</module>
-	<module>odata</module>
-    <module>model</module>
-    <module>proxy</module>
-  	<module>plugin</module>
-  </modules>
+	</modules>
 </project>
